--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/public/vaibhav_lachhwani_logo.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="/vaibhav_lachhwani_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vaibhav Lachhwani</title>
   </head>
