--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vaibhav_lachhwani_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A developer portfolio of Vaibhav Lachhwani, fullstack developer with backend heavy experience."
+    />
+    <meta name="robots" content="index, follow" />
     <title>Vaibhav Lachhwani</title>
   </head>
   <body>
