add google verification

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       content="A developer portfolio of Vaibhav Lachhwani, fullstack developer with backend heavy experience."
     />
     <meta name="robots" content="index, follow" />
+    <meta
+      name="google-site-verification"
+      content="wIeIQWyrAg_kgiH5zc98kds39wjS1bKKRAuTzuPJIHI"
+    />
     <title>Vaibhav Lachhwani</title>
   </head>
   <body>
